--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Style Links -->
+    <link rel="stylesheet" href="style/default.css">
+    <link rel="stylesheet" href="style/header-style.css">
+    <link rel="stylesheet" href="style/main-style.css">
+    <link rel="stylesheet" href="style/media-queries.css">
+    <!-- JavaScript -->
+    <script defer src="script/script.js"></script>
 </head>
 <body>
-    <!-- Navagation Bar -->
-    <nav class="nav-bar">
-        <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
-        <ul class="nav-buttons">
-            <li class="nav-items"><a class="nav-button" href="#">Home</a></li>
-            <li class="nav-items"><a class="nav-button" href="#">Products</a></li>
-            <li class="nav-items"><a class="nav-button" href="#">Newsletter</a></li>
-            <li class="nav-items"><a class="nav-button" href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <!-- Navagation Bar -->
+        <nav class="nav-bar">
+            <!-- Logo -->
+            <img class="logo" src="images/logo.png" alt="logo" role="img">
+            <!-- Menu -->
+            <div class="menu" role="menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <!-- Navagation links -->
+            <div class="nav-items" role="navigation">
+                <a class="nav-buttons" role="button" href="#">Home</a>
+                <a class="nav-buttons" role="button" href="#">Products</a>
+                <a class="nav-buttons" role="button" href="#">NewsLetter</a>
+                <a class="nav-buttons" role="button" href="#">Contact</a>
+            </div>
+        </nav>
+    </header>
     <!-- Landing Page -->
-    <section class="landing-page">
-        <!-- Main title -->
-        <div class="presentation-conteiner">
-            <h3 class="title">THAT'S WHAT<br><span class="i-like">I LIKE</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi sequi beatae ipsa voluptates rerum architecto similique? Omnis, magnam ea? Incidunt consectetur beatae tempore eum maxime accusantium explicabo at perspiciatis?</p>
-            <a class="button" href="#">VIEW ALL PRODUCTS</a>
-        </div>
+    <main class="landing-page">
+        <section class="presentation" role="banner">
+            <!-- Presentation title -->
+            <div class="title-wrapper" role="text">
+                <h2 class="title">THAT'S WHAT <br><span class="strong-title">I LIKE</span></h2>
+            </div>
+            <p class="paragraph" role="taxt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum similique, eligendi ut aliquam asperiores perspiciatis ratione repellendus reiciendis optio illum deserunt placeat laudantium eaque, culpa, dolores explicabo facere labore impedit.</p>
+            <a class="products-button" role="button" href="#" onclick="handleButton()">VIEW ALL PRODUCTS</a>
+        </section>
         <!-- Social Media -->
-        <div class="social-media-icons">
+        <section class="social-media">
             <a href="#"><img src="images/facebook.png" alt="facebook"></a>
             <a href="#"><img src="images/instagram.png" alt="instagram"></a>
             <a href="#"><img src="images/twitter.png" alt="twitter"></a>
-        </div>
-        <!-- Soda images -->
-        <div class="soda-conteiner">
-            <img src="images/cocacola1.png" alt="coca">
-            <img src="images/cocacola2.png" alt="coca">
-            <img src="images/cocacola3.png" alt="coca">
-            <img src="images/cocacola4.png" alt="coca">
-        </div>
+        </section>
+        <!-- Sodas -->
+        <section class="sodas">
+            <img class="sodas" id="soda-1" src="images/cocacola1.png" alt="coca-cola">
+        </section>
         <div class="circle"></div>
-    </section>
+    </main>
 </body>
 </html>
