modified:   index.html 	modified:   style/main-style.css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2 class="title">THAT'S WHAT <br><span class="strong-title">I LIKE</span></h2>
             </div>
             <p class="paragraph" role="taxt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum similique, eligendi ut aliquam asperiores perspiciatis ratione repellendus reiciendis optio illum deserunt placeat laudantium eaque, culpa, dolores explicabo facere labore impedit.</p>
-            <a class="products-button" role="button" href="#" onclick="handleButton()">VIEW ALL PRODUCTS</a>
+            <a class="btn" role="button" href="#" onclick="handleButton()">VIEW ALL PRODUCTS</a>
         </section>
         <!-- Social Media -->
         <section class="social-media">
